--- a/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
@@ -209,6 +209,7 @@
   <string name="sim1_description">SIM-kortti 1</string>
   <string name="sim2_description">SIM-kortti 2</string>
   <string name="sip_call_not_support_record">SIP-puheluita ei voi nauhoittaa</string>
+  <string name="supp_service_notification_call_waiting">Soittamasi numero on varattu. Ole hyvä ja odota…</string>
   <string name="suspect_info">Ole varovainen: Aina varmista henkilön henkilöllisyys, joko puhelulla tai videolla, ennen kuin vastaat mihinkään viestiin, jossa käsitellään henkilökohtaisia tietoja.</string>
   <string name="time_left_livetalk">(%ds)</string>
   <string name="unknown">Tuntematon</string>
