--- a/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
@@ -85,6 +85,16 @@
   <string name="cloud_state_sync_finished">Synkronoitu Mi Pilveen</string>
   <string name="cloud_state_syncing">Synkronoidaan Mi Pilveen…</string>
   <string name="cmcc_privacy">China Mobile Operaattorin Tietosuojasopimus</string>
+  <string name="complain_input_number">Anna puhelinnumerosi</string>
+  <string name="complain_jump">Ohita</string>
+  <string name="complain_message_title">Valita</string>
+  <string name="complain_ok">OK</string>
+  <string name="complain_phone_number">puhelinnumero</string>
+  <string name="complain_reason">Miksi ilmoitat tämän viestin?</string>
+  <string name="complain_success">Kiitos palautteestasi. Se auttaa meitä luomaan Viestit -sovelluksesta paremman!</string>
+  <string name="complain_tips">"Ilmoittamasi viimeaikaisimman viestin sisältö lähetetään palvelimillemme antamasi puhelinnumeron kera. Palveluntarjoajamme tarkistavat ilmoitetun viestin.
+"</string>
+  <string name="complain_upload">Complaint has been submitted</string>
   <string name="compressing">Kuva on liian iso. Pakataan…</string>
   <string name="confirm">OK</string>
   <string name="confirm_add_blacklist_dialog_dspt">Lisätäänkö tämä numero estolistallesi?</string>
@@ -150,7 +160,6 @@
   <string name="dialog_message_mx">Mi Viestin avulla voit lähettää viestejä toisille MIUI-käyttäjille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä.</string>
   <string name="dialog_message_networking">Viestisovelluksen täytyy käyttää Keltaisiasivuja tarjotakseen Lähettäjän ID-tunnistuksen. Viestisovelluksen ja Keltaisensivujen on yhdistettävä internetiin ja saatava sijaintitietosi toimiakseen normaalisti. Hyväksytkö?</string>
   <string name="dialog_message_rcs">China Mobile:n viestinnän avulla voit lähettää viestejä toisille China Mobile -käyttäjille Mannerkiinassa ilman maksuja. Sinun täytyy hyväksyä \"%1$s\" ennen China Mobile viestinnän käyttämistä.</string>
-  <string name="dialog_message_sms_report">Roskaviestit ja lähettäjän tiedot lähetetään MIUI:lle, kun ilmoitat niistä. Niitä käytetään vain parantaakseen MIUI:n roskaviestin suodattimia.</string>
   <string name="dialog_title_fake_cell_detect_error">Korjaaminen</string>
   <string name="dialog_title_mx_rcs">Mi Viesti</string>
   <string name="dialog_title_networking">Käyttöehdot</string>
@@ -186,7 +195,6 @@
   <string name="ex_type_guide">Tiedot</string>
   <string name="ex_type_mx">Mi Viesti</string>
   <string name="ex_type_sms">Tekstiviesti/Multimediaviesti</string>
-  <string name="exceed_length_limit">超出最大长度界限</string>
   <string name="exceed_message_size_limitation">Viestin koon raja saavutettu.</string>
   <string name="exceed_message_size_limitation_add_slide">Viestin koko ei ole tarpeeksi iso dian lisäämiselle</string>
   <string name="exceed_message_text_limitation">Viestin tekstin pituuden raja saavutettu.</string>
@@ -221,17 +229,17 @@
   <string name="found_wild_messages_title">Synkronoi viestit Mi Pilvestä</string>
   <string name="from_label">"Lähettäjä: "</string>
   <string name="from_pkg_name">Sovelluksesta:</string>
-  <string name="group_already_kicked_hint">你不在这个群里，无法发送消息</string>
+  <string name="group_already_kicked_hint">Viestejä ei voi lähettää. Et ole tämän ryhmäkeskustelun jäsen.</string>
   <string name="group_message">Ryhmäviesti</string>
-  <string name="group_message_title">群聊消息</string>
-  <string name="group_not_exist_hint">群已经被解散了，无法发送消息</string>
-  <string name="group_notify_message_title">群通知消息</string>
-  <string name="group_rejoin_failed">群操作失败</string>
+  <string name="group_message_title">Ryhmäkeskustelut</string>
+  <string name="group_not_exist_hint">Viestejä ei voi lähettää. Tämä ryhmäkeskustelu poistettiin.</string>
+  <string name="group_notify_message_title">Ryhmäkeskustelun ilmoitukset</string>
+  <string name="group_rejoin_failed">Ryhmäkeskusteluun ei voitu liittyä</string>
   <string name="group_resend_message">Lähetä uudelleen (%d)</string>
   <string name="group_verification_codes_summary">Ryhmitä kertakäyttösalasanat automaattisesti keskenään</string>
   <string name="group_verification_codes_title">Ryhmitä kertakäyttösalasanat</string>
-  <string name="group_view_settings_disolved">群已经被解散，无法查看群资料</string>
-  <string name="group_view_settings_not_memeber">不在这个群里，无法查看群资料</string>
+  <string name="group_view_settings_disolved">Kohteita ei voi katsoa. Tämä ryhmäkeskustelu poistettiin.</string>
+  <string name="group_view_settings_not_memeber">Kohteita ei voi katsoa. Et ole tämän ryhmäkeskustelun jäsen.</string>
   <string name="guild_add_attachments">Lisää hymiöitä ja muuta sisältöä napauttamalla</string>
   <string name="guild_add_recipients">Lisää vastaanottajia osoitekirjasta napauttamalla</string>
   <string name="guild_msim_switcher">Vaihda SIM-kortteja napauttamalla</string>
@@ -309,7 +317,7 @@
   <string name="mms">MMS</string>
   <string name="move_down">Siirrä alas</string>
   <string name="move_up">Siirrä ylös</string>
-  <string name="msg_no_member_selected">请至少选择一个联系人.</string>
+  <string name="msg_no_member_selected">Valitse vähintään yksi yhteystieto</string>
   <string name="msg_type_hint_mms">Multimediaviesti (MMS)</string>
   <string name="msg_type_hint_mms_omit">MMS</string>
   <string name="msg_type_hint_mx">Mi Viesti</string>
@@ -444,7 +452,6 @@
   <string name="pref_sms_storage_title">Tallennustila</string>
   <string name="pref_sms_theme_title">Näyttäminen</string>
   <string name="pref_summary_allow_si_sl_push">Salli viestien ladata verkkosivustojen sisältöä</string>
-  <string name="pref_summary_allow_upload_message_info">Roskaviestit ja lähettäjän tiedot lähetetään MIUI:lle, kun ilmoitat niistä.</string>
   <string name="pref_summary_auto_delete">Poista vanhoja viestejä, kun rajat on saavutettu</string>
   <string name="pref_summary_delete_limit">%1$s viestiä per keskustelu</string>
   <string name="pref_summary_delivery_reports">Näytä toimitettujen viestien tila</string>
@@ -461,7 +468,6 @@
   <string name="pref_switch_sdk_setting">Vaihda älykkään tekstiviestin moottori</string>
   <string name="pref_system_title">Järjestelmä</string>
   <string name="pref_title_allow_si_sl_push">Salli WAP push-viestit (SI/SL)</string>
-  <string name="pref_title_allow_upload_message_info">Lähetä roskaviestit</string>
   <string name="pref_title_auto_delete">Poista vanhoja viestejä</string>
   <string name="pref_title_card_format">Käyntikortin jakomuoto</string>
   <string name="pref_title_delivery_reports">Toimituksen tila</string>
@@ -515,19 +521,19 @@
   <string name="rcs_auto_resend_sms">Muunna tekstiviestiksi</string>
   <string name="rcs_auto_resume">Jatka keskeytettyjä lähetyksiä automaattisesti</string>
   <string name="rcs_auto_resume_only_by_wifi">Jatka lähetyksiä vain Wi-Fi-yhteydellä</string>
-  <string name="rcs_create_new_group">新建群聊</string>
+  <string name="rcs_create_new_group">Luo ryhmäkeskustelu</string>
   <string name="rcs_dspt">Lähetä ja vastaanota viestejä käyttäen Wi-Fi-yhteyttä tai China Mobile -verkkoa</string>
   <string name="rcs_dspt_unavailable">Tätä ominaisuutta ei voi käyttää tällä hetkellä. China Mobile SIM-kortti ei ole oletuskorttisi.</string>
   <string name="rcs_forward_faild">Välittäminen epäonnistui</string>
   <string name="rcs_forward_successful">Välitettiin onnistuneesti</string>
-  <string name="rcs_group_notification_invitation">群邀请</string>
+  <string name="rcs_group_notification_invitation">Ryhmäkeskustelukutsu</string>
   <string name="rcs_message">China Mobile Viestintä</string>
   <string name="rcs_message_disable">Tätä viestiä ei voi lukea Toisessa tilassa</string>
   <string name="rcs_msg">China Mobile Viestintä</string>
   <string name="rcs_not_online">China Mobile Viestintää ei voi käyttää. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
   <string name="rcs_offline_hint">China Mobile Viestintä on offline-tilassa. Tätä viestiä ei voi välittää.</string>
   <string name="rcs_recipient_type_contact">Välitä yhteystiedolle</string>
-  <string name="rcs_recipient_type_group">转发到群</string>
+  <string name="rcs_recipient_type_group">Välitä ryhmäkeskusteluun</string>
   <string name="rcs_recipient_type_pc">Välitä tietokoneelle</string>
   <string name="rcs_resend_not_online">China Mobile Viestintää ei voi käyttää</string>
   <string name="rcs_resend_sim_card_not_insert">Näyttää siltä, että SIM-korttiasi ei ole asennettu</string>
@@ -674,7 +680,6 @@
   <string name="sms_full_title">Tekstiviestin muisti on täynnä</string>
   <string name="sms_rejected_body">Saapuva tekstiviesti hylättiin.</string>
   <string name="sms_rejected_title">Tekstiviesti hylättiin</string>
-  <string name="sms_report">Ilmoita roskaviesteistä</string>
   <string name="sms_report_dialog_content">Ilmoitusta ei voitu lähettää, yritä uudelleen.</string>
   <string name="sms_report_dialog_retry">Yritä uudelleen</string>
   <string name="sms_report_dialog_title">Yritä uudelleen</string>
