--- a/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
@@ -153,6 +153,10 @@ Varmista, että yrityksesi nimi on oikein. Lue ja hyväksy tietosuojakäytäntö
   <string name="green_guard_des3">Hallitse asennettuja sovelluksia ja rajoita käyttöä</string>
   <string name="green_guard_title2">Näytä sijaintitiedot</string>
   <string name="green_guard_title3">Hallitse sovelluksia</string>
+  <string name="greenguard_child_des">Käytä sovellustamme pysyäksesi yhteydessä</string>
+  <string name="greenguard_child_des_title">Tarvitsen apua ystäviltäni ja perheeltäni</string>
+  <string name="greenguard_parent_des">Lataa sovelluksemme ja lisää muiden henkilöiden laitteita</string>
+  <string name="greenguard_parent_des_title">Minun täytyy autttaa ystäviäni ja perhettäni</string>
   <string name="guide_contact_sub_title_desc">"Toiseen tilaan lisätyistä yhteystiedoista tulee yksityisiä.
 Viestit ilmestyvät vain Toisessa tilassa."</string>
   <string name="guide_contact_suc_sub_title_desc">Vain yksityiset yhteystiedot ja viestit näytetään Toisessa tilassa</string>
