--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -279,7 +279,7 @@ Järjestelmänvalvoja voi valvoa tähän käyttäjäprofiiliin liittyviä asetuk
   <string name="allow_bind_app_widget_activity_allow_bind_title">Luo widget ja salli käyttö?</string>
   <string name="allow_bind_app_widget_activity_always_allow_bind">%1$s saa luoda widgetejä ja käyttää niiden tietoja</string>
   <string name="allow_data_usage_title">Salli roaming-tiedonsiirto</string>
-  <string name="allow_device_id_access">Sovellukset, joilla on pääsy Laitteen ID:seen</string>
+  <string name="allow_device_id_access">Sovellukset, joilla on Laite ID:n käyttöoikeus</string>
   <string name="allow_mock_location">Salli sijaintien imitointi</string>
   <string name="allow_mock_location_summary">Salli sijaintien imitointi</string>
   <string name="allow_overlay_description">Anna sovelluksen näkyä muiden avoimien sovellusten päällä. Se voi häiritä muiden sovellusten käyttöä tai muuttaa niiden ulkoasua tai vaikutelmaa käyttäytymisestä.</string>
@@ -1562,7 +1562,7 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="device_display_layout_title">Ominaisuudet</string>
   <string name="device_edit_title">Nimeä laite uudelleen</string>
   <string name="device_feedback">Lähetä palautetta tästä laitteesta</string>
-  <string name="device_id">Laitteen ID</string>
+  <string name="device_id">Laite ID</string>
   <string name="device_info_default">Tuntematon</string>
   <string name="device_info_label">Laitteen tiedot</string>
   <string name="device_info_not_available">Ei käytettävissä</string>
@@ -2217,8 +2217,8 @@ Varmuuskopioita ei vähennetä Drive-tallennustilan kiintiöstäsi. Suuria ja ke
   <string name="header_category_device">Laite</string>
   <string name="header_category_personal">Henkilökohtainen</string>
   <string name="header_category_system">Järjestelmä</string>
-  <string name="header_category_wireless_networks">Langaton verkko ja verkot</string>
-  <string name="header_data_and_synchronization">Tiedot ja synkronointi</string>
+  <string name="header_category_wireless_networks">Langaton &amp; verkot</string>
+  <string name="header_data_and_synchronization">Tiedot &amp; synkronointi</string>
   <string name="heavy_weight_stop_description">Tätä sovellusta ei voi pysäyttää turvallisesti. Jos pysäytät sovelluksen, saatat menettää tietoja.</string>
   <string name="help_feedback_label">Ohje ja palaute</string>
   <string name="help_label">Ohjeet ja palaute</string>
@@ -2692,6 +2692,7 @@ PIN-koodi"</string>
   <string name="long_press_home_key">Paina Koti-painiketta pitkään</string>
   <string name="long_press_menu_key">Paina Valikko-painiketta pitkään</string>
   <string name="long_press_menu_key_when_lock">Paina Valikko-painiketta pitkään Lukitusnäytöllä</string>
+  <string name="long_press_power_key_half_of_second">Paina ja pidä pohjassa Virtapainiketta 0.5 sekunnin ajan käynnistääksesi Google Assistantin</string>
   <string name="long_press_volume_down">Paina Äänenvoimakkuus alas-painiketta pitkään</string>
   <string name="lost_internet_access_cancel">Jatka Wi-Fi-yhteydellä</string>
   <string name="lost_internet_access_persist">Älä näytä uudelleen</string>
@@ -2849,7 +2850,7 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="menu_stats_unplugged">%1$s laturin irrottamisen jälkeen</string>
   <string name="menu_use_uss">Käytä USS-muistimääritystä</string>
   <string name="mi_pay">Mi Wallet</string>
-  <string name="mi_pay_indonesia">Akun Mi Pay</string>
+  <string name="mi_pay_indonesia">Mi Pay Tili</string>
   <string name="mi_pay_summary">Bussikortti/Mi Pay/Kortin emulaattori</string>
   <string name="mi_service">Mi Palvelu</string>
   <string name="mi_service_app_detail">Datan käytön tiedot</string>
@@ -2894,10 +2895,10 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="miui_sos_contacts_category">Hätäyhteystiedot</string>
   <string name="miui_sos_emergency_contacts">Hätäyhteystiedot</string>
   <string name="miui_sos_emergency_contacts_quantity">%d lisätty</string>
-  <string name="miui_sos_emergency_delivered_sms" formatted="false">%1s(%2s) on jo hyväksynyt</string>
+  <string name="miui_sos_emergency_delivered_sms" formatted="false">%1s (%2s) on jo hyväksynyt.</string>
   <string name="miui_sos_emergency_delivered_sms_noname">%1s on jo hyväksynyt</string>
-  <string name="miui_sos_emergency_failed_sms" formatted="false">%1s(%2s) SOS-viestin lähettäminen epäonnistui.</string>
-  <string name="miui_sos_emergency_failed_sms_noname">%1s SOS-viestin lähettäminen epäonnistui.</string>
+  <string name="miui_sos_emergency_failed_sms" formatted="false">Viestiä ei voitu lähettää henkilölle %1s (%2s).</string>
+  <string name="miui_sos_emergency_failed_sms_noname">Viestiä ei voitu lähettää henkilölle %1s.</string>
   <string name="miui_sos_enable_switch_summary">Paina Virta-painiketta nopeasti 5 kertaa lähettääksesi SOS-tekstiviestin sijaintisi tietojen kanssa hätäyhteystiedoillesi</string>
   <string name="miui_sos_enable_switch_title">Hätätila</string>
   <string name="miui_sos_exit_dialog_cancel">Peruuta</string>
@@ -3000,7 +3001,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="music_dirac_mode_general">Yleinen</string>
   <string name="music_dirac_mode_general_earbuds">Yleinen</string>
   <string name="music_dirac_mode_general_inear">Yleinen In-Ear</string>
-  <string name="music_dirac_mode_half_in_ear">Mi Half in Ear</string>
+  <string name="music_dirac_mode_half_in_ear">Mi Half In-Ear</string>
   <string name="music_dirac_mode_headset">Mi Headphones</string>
   <string name="music_dirac_mode_headset_comfort">Mi Comfort</string>
   <string name="music_dirac_mode_in_ear">Mi In-Ear</string>
@@ -3178,7 +3179,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="no_nearby_wifi">Ei verkkoja havaittavissa</string>
   <string name="no_notification_listeners">Yksikään asennettu sovellus ei ole pyytänyt ilmoituksien käyttöoikeutta.</string>
   <string name="no_running_services">Ei palveluita käynnissä.</string>
-  <string name="no_services">Ei aktiivinen</string>
+  <string name="no_services">Ei aktiivisia palveluita</string>
   <string name="no_trust_agents">Ei luotettavia tahoja</string>
   <string name="no_update_found">Sinulla on jo viimeisin MIUI versio</string>
   <string name="no_updates_found">Sinulla on jo viimeisin MIUI versio</string>
@@ -3465,6 +3466,14 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="power_hide_mode_summary">Säästä virtaa rajoittamalla yksittäisten sovelluksien taustatyöskentelyä, Wi-Fi- ja mobiilidatayhteyksiä, ja GPS:n käyttöä</string>
   <string name="power_hide_mode_title">Hallitse sovelluksien akunkäyttöä</string>
   <string name="power_idle">Puhelin on käyttämätön</string>
+  <string name="power_key_how_power_force_off">Kuinka laitteesi paketetaan uudelleenkäynnistymään</string>
+  <string name="power_key_how_power_force_off_detail">Paina ja pidä pohjassa Virtapainiketta, kunnes laitteesi käynnistyy uudelleen</string>
+  <string name="power_key_how_power_off">Kuinka avataan sammutus -sivu</string>
+  <string name="power_key_how_power_off_detail">Paina ja pidä pohjassa Virtapainiketta 3 sekunnin ajan</string>
+  <string name="power_key_how_start">Kuinka Google Assistantti herätetään</string>
+  <string name="power_key_how_start_detail">Paina ja pidä pohjassa Virtapainiketta 0.5 sekunnin ajan. Vapauta puhuaksesi.</string>
+  <string name="power_key_start_enjoy">Lisätietoja Google Assistantista</string>
+  <string name="power_key_start_guide">Google Assistantin herättäminen käyttäen Virtapainiketta koko näytön laitteilla</string>
   <string name="power_last_full_charge_summary">^1 sitten</string>
   <string name="power_mgr">Akku</string>
   <string name="power_mode">Virran asetukset</string>
@@ -3838,10 +3847,10 @@ Bluetooth."</string>
   <string name="restore_default_apn">Palautetaan APN-oletusasetuksia</string>
   <string name="restore_default_apn_completed">APN-oletusasetukset on palautettu.</string>
   <string name="restore_device_id_content">Palauta henkilökohtaiset suositukset</string>
-  <string name="restore_device_id_title">Palauta laitteen ID</string>
-  <string name="restore_dialog_content">Laitteen ID:n palauttaminen palauttaa henkilökohtaiset suosituksesi.</string>
+  <string name="restore_device_id_title">Palauta Laite ID</string>
+  <string name="restore_dialog_content">Laite ID:n palauttaminen palauttaa henkilökohtaiset suosituksesi.</string>
   <string name="restore_dialog_positive">Palauta</string>
-  <string name="restore_dialog_title">Muistutus</string>
+  <string name="restore_dialog_title">Huomio</string>
   <string name="restr_pin_enter_admin_pin">Anna järjestelmänvalvojan PIN-koodi</string>
   <string name="restrict_background_blacklisted">Taustatiedonsiirto ei käytössä</string>
   <string name="restrict_bg_app">Rajoita</string>
@@ -4574,8 +4583,9 @@ PIN-koodi on mahdollisesti virheellinen."</string>
   <string name="sort_order_size">Lajittelu koon mukaan</string>
   <string name="sos_privacy_and_content_policy">Käyttöehdot ja Tietosuojakäytäntö</string>
   <string name="sos_privacy_dialog_button_cancel">Peruuta</string>
-  <string name="sos_privacy_dialog_button_ok">Jatka</string>
-  <string name="sos_privacy_dialog_message">"Ottaaksesi Hätätilan aputoiminnon käyttöön, vahvista ja lue %s. Jotta Hätätilan aputoiminto toimisi normaalisti, se voi käyttää sijaintitietojasi, mobiiliverkkoasi ja lukea osoitekirjaasi, vahvistatko?</string>
+  <string name="sos_privacy_dialog_button_ok">Hyväksyn</string>
+  <string name="sos_privacy_dialog_message">"Lue ja hyväksy meidän %s ennen tämän toiminnon käyttämistä.
+Tämä toiminto tarvitsee käyttöoikeuden sijaintitietoihisi, käyttää mobiiliverkkoja ja lukea yhteystietojasi. Hyväksytkö?"</string>
   <string name="sos_privacy_dialog_title">Käyttöehdot</string>
   <string name="sound_category_call_ringtone_vibrate_title">Soittoääni &amp; ilmoitusäänet</string>
   <string name="sound_category_sound_title">Yleiset</string>
@@ -4659,6 +4669,7 @@ Laitteeseesi asennettu luotettu varmenne tekee tämän mahdolliseksi."</string>
   <string name="status_bar_settings_show_home_message">Sovelluksen kuvakemerkki</string>
   <string name="status_bar_settings_show_keyguard_notification">Lukitusnäytön ilmoitukset</string>
   <string name="status_bar_settings_show_keyguard_notification_summary">Salli tärkeät ilmoitukset Lukitusnäytöllä</string>
+  <string name="status_bar_settings_show_lte_for_4g">Näytä LTE-kuvake 4G:n tilalla</string>
   <string name="status_bar_settings_show_network_speed">Näytä yhteyden nopeus</string>
   <string name="status_bar_settings_show_notification_icon">Näytä ilmoituksen kuvake</string>
   <string name="status_bar_settings_show_wifi_name">Näytä Wi-Fi</string>
@@ -4880,6 +4891,7 @@ Nopeampi ^1 voi toimia tehokkaammin."</string>
   <string name="suggestions_title">Ehdotukset</string>
   <string name="sum_carrier_select">Valitse verkko-operaattori</string>
   <string name="summary_divider_text">", "</string>
+  <string name="summary_font_size_v2">Säädä kokoa tekstille, kuville ja kuvakkeille</string>
   <string name="summary_range_verbal_combination">%1$s–%2$s</string>
   <string name="supl_not_set">Ei asetettu</string>
   <string name="supplicant_state_label">Anojan tila:</string>
@@ -5007,6 +5019,7 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="tethering_no_sim_alert_title">Ei SIM-korttia</string>
   <string name="tethering_no_sim_card_text">Ole hyvä ja asenna SIM-kortti, jotta voit jakaa laitteesi internetyhteyden käyttämällä USB:tä tai luomalla kannettavan Hotspot yhteyspisteen.</string>
   <string name="tethering_settings_not_available">Tämä käyttäjä ei voi käyttää yhteyden jakamisasetuksia</string>
+  <string name="the_way_of_wakeup_voice_assistant_summary">Herätä ääniavustaja koko näytön tilassa (ei virtuaalisia painikkeita)</string>
   <string name="theme_settings_title">Teemat</string>
   <string name="thememanager_not_found">Teemat-sovellusta ei voitu avata. Varmista, että sovellus on asennettuna.</string>
   <string name="three_gesture_down">Pyyhkäise kolmella sormella alaspäin</string>
@@ -5021,10 +5034,12 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="title_font_current">Järjestelmäfontti</string>
   <string name="title_font_current2">Järjestelmäfontti</string>
   <string name="title_font_size">Kirjasimen koko</string>
+  <string name="title_font_v2">Teksti &amp; UI-elementit</string>
   <string name="title_hdmi_color_calibration">Värikorjaus preset</string>
   <string name="title_jeejen">Jeejen Aloitusnäyttö</string>
   <string name="title_layout_current">Tekstin koko</string>
   <string name="title_layout_current2">Tekstin koko</string>
+  <string name="title_layout_v2">Tekstin koko &amp; skaalaus</string>
   <string name="to_close">Poista käytöstä</string>
   <string name="toast_lockscreen_glogin_empty_password">Syötä salasana</string>
   <string name="toast_need_login">Kirjaudu sisään Mi Tilillesi</string>
